# ypa-center-backend

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  init_project.sh  main.py  pyproject.toml  taskiq_config.py
apps/billing/: adapters.py  admin.py  models.py  permissions.py  ports.py  serializers.py  services.py  tasks.py  urls.py  views.py
apps/billing/migrations/: 0001_initial.py  0002_remove_enrollment_uq_billing_active_enrollment_per_student_slot_and_more.py  0003_attendance_comment.py  0004_subscriptionplan_showcase_fields.py  0005_transaction_compensation_claim.py
apps/billing/tests/: conftest.py  factories.py  test_admin.py  test_billing.py  test_services_admin.py
apps/catalog/: admin.py  models.py
apps/catalog/migrations/: 0001_initial.py  0002_activity_category_activity_price.py  0003_activity_showcase_fields.py  0004_activity_description.py
apps/content/: admin.py  apps.py  models.py
apps/content/migrations/: 0001_initial.py
apps/content/tests/: factories.py
apps/core/: caching.py  dashboard.py  exceptions.py  locks.py  middleware.py  throttling.py
apps/core/management/commands/: seed_demo.py
apps/core/tests/: test_dashboard.py  test_locks.py  test_seed_demo.py  test_taskiq_broker.py
apps/events/: admin.py  apps.py  models.py  serializers.py  services.py  tasks.py  throttling.py  urls.py  views.py
apps/events/migrations/: 0001_initial.py  0002_eventregistration_parent.py
apps/events/tests/: factories.py  test_events.py
apps/journal/: admin.py  apps.py  models.py  services.py  tasks.py
apps/journal/migrations/: 0001_initial.py  0002_teachers_group.py
apps/journal/tests/: factories.py  test_journal.py
apps/me/: apps.py  serializers.py  services.py  urls.py  views.py
apps/me/tests/: test_me.py
apps/public_api/: apps.py  serializers.py  signals.py  urls.py  views.py
apps/public_api/tests/: test_public_api.py
apps/public_forms/: admin.py  apps.py  models.py  serializers.py  services.py  tasks.py  throttling.py  urls.py  views.py
apps/public_forms/migrations/: 0001_initial.py
apps/public_forms/tests/: factories.py  test_public_forms.py
apps/schedule/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
apps/schedule/migrations/: 0001_enable_btree_gist.py  0002_initial.py  0003_schedule_sync_triggers.py  0004_schedule_age_range.py
apps/schedule/tests/: factories.py  test_domain.py
apps/users/: admin.py  constants.py  models.py  serializers.py  services.py  tasks.py  tests.py  throttling.py  views.py
apps/users/migrations/: 0001_initial.py  0002_teacherprofile.py  0003_teacherprofile_showcase_fields.py  0004_student_unique_per_parent.py
config/: settings.py  tkq.py  urls.py  worker.py
docs/: README.md  admin.md  api-contracts-legacy.md  api-core-contracts.md  auth-flow.md  checkout-flow.md  project-context.md  public-forms-design.md  schema-audit.md  schema-legacy.md  schema-refactoring.md  schema.md
templates/admin/: index.html
templates/admin/billing/: freeze_subscription.html
