[project]
name = "ypa-center-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "adrf>=0.1.13",
    "dj-database-url>=3.1.2",
    "django-ipware>=7.0.1",
    "django-phonenumber-field[phonenumbers]>=8.4.0",
    "django-simple-history>=3.12.0",
    "django-unfold>=0.100.0",
    "drf-spectacular>=0.30.0",
    "httpx>=0.28.1",
    "whitenoise>=6.12.0",
]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = false

mypy_path = "."
explicit_package_bases = true

plugins = ["mypy_django_plugin.main"]

[[tool.mypy.overrides]]
module = "phonenumber_field.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["apps.*.tests", "apps.*.factories"]
ignore_errors = true

[[tool.mypy.overrides]]
module = "config.urls"
disable_error_code = ["attr-defined"]

[tool.django-stubs]
django_settings_module = "config.settings"

[dependency-groups]
dev = [
    "pytest-asyncio>=1.4.0",
]

